# nikolina_v_m

./: README.md
nikolina_v_m/prj.lab/: CMakeLists.txt  orto.cpp  orto.txt
nikolina_v_m/prj.lab/arrayd/include/arrayd/: arrayd.hpp
nikolina_v_m/prj.lab/arrayt/include/arrayt/: arrayt.hpp
nikolina_v_m/prj.lab/matrixs/: matrixs.cpp
nikolina_v_m/prj.lab/matrixs/include/matrixs/: matrixs.hpp
nikolina_v_m/prj.lab/rational/: rational.cpp  rational.hpp
nikolina_v_m/prj.lab/rational/include/: rational.hpp
nikolina_v_m/prj.test/: CMakeLists.txt  arrayd_test.cpp  matrixs_test.cpp  rational_test.cpp
